--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body{
   background-color: #0C1A1A;
 }
-h1{
+.h1-style{
   color: white;
   font-family: 'Epilogue', sans-serif;
   font-weight: 700;
   line-height: 96px;
 }
-p{
+.p-style{
   color:white;
   font-family: 'Epilogue', sans-serif;
   line-height: 32px;
