--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   background-color: #0C1A1A;
 }
 .h1-style{
-  color: white;
+  color: white !important;
   font-family: 'Epilogue', sans-serif;
   font-weight: 700;
   line-height: 96px;
