--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body{
   background-color: #0C1A1A;
 }
-.h1-style{
-  color: white !important;
+body.h1{
+  color: white;
   font-family: 'Epilogue', sans-serif;
   font-weight: 700;
   line-height: 96px;
 }
-.p-style{
+body.p{
   color:white;
   font-family: 'Epilogue', sans-serif;
   line-height: 32px;
