--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body{
   background-color: #0C1A1A;
 }
-body.h1{
-  color: white;
-  font-family: 'Epilogue', sans-serif;
-  font-weight: 700;
-  line-height: 96px;
-}
 body.p{
   color:white;
   font-family: 'Epilogue', sans-serif;
   line-height: 32px;
+}
+h1{
+  color: #ffffff;
+  display: block;
+  font-size: 2em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-family: 'Epilogue', sans-serif;
+  font-weight: 700;
+  line-height: 96px;
 }
