--- a/style.css
+++ b/style.css
@@ -2,12 +2,19 @@ body{
   font-family: 'Epilogue', sans-serif;
   background-color: #0C1A1A;
 }
-body.p{
-  color:white;
-  font-family: 'Epilogue', sans-serif;
-  line-height: 32px;
-}
 h1{
+  color: #ffffff;
+  font-family: 'Epilogue', sans-serif;
+}
+h2{
+  color: #ffffff;
+  font-family: 'Epilogue', sans-serif;
+}
+h3{
+  color: #ffffff;
+  font-family: 'Epilogue', sans-serif;
+}
+p{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
 }
