--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@ body{
   font-family: 'Epilogue', sans-serif;
   background-color: #0C1A1A;
 }
-h1{
+.h1{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
 }
-h2{
+.h2{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
 }
-h3{
+.h3{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
 }
-p{
+.p{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
 }
