--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
   font-family: 'Epilogue', sans-serif;
-  background-color: #0C1A1A;
+  background-color: #333333;
 }
 h1{
   color: #ffffff !important;
