--- a/style.css
+++ b/style.css
@@ -15,6 +15,6 @@ h3{
   font-family: 'Epilogue', sans-serif;
 }
 .p{
-  color: #ffffff;
+  color: #ffff33;
   font-family: 'Epilogue', sans-serif;
 }
