--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 body{
   font-family: 'Epilogue', sans-serif;
   background-color: #0C1A1A;
