--- a/style.css
+++ b/style.css
@@ -1,21 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 body{
   font-family: 'Epilogue', sans-serif;
-  background-color: #0C1A1A;
+  background-color: #031111;
+  padding: 30px;
 }
 h1{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
+  font-size: 4.2em;
+  font-weight: 800;
+  line-height: 100%;
+  letter-spacing: 0em;
+  text-align: left;
+  margin:0 auto;
+  padding: 10px 0;
 }
-h2{
+p{
   color: #ffffff;
   font-family: 'Epilogue', sans-serif;
+  font-size: 1.1em;
+  font-weight: 300;
+  line-height: 140%;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 0 auto;
+
 }
-h3{
-  color: #ffffff;
-  font-family: 'Epilogue', sans-serif;
+a{
+  color: #10F0F0;
 }
-.p{
-  color: #ffff33;
-  font-family: 'Epilogue', sans-serif;
+.center{
+  margin: 0;
+  position: absolute;
+  bottom: 40%;
+  -ms-transform: translateY(30%);
+  transform: translateY(30%);
+}
+.copy{
+  position:absolute;
+  bottom:4%;
+  font-size: 0.7em;
+}
+.logo{
+  background-image: url('/assets/logo.png')
+  width: 100px;
+  height: 24px;
+}
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+  .logo {
+    background-image: url('/assets/logo@2x.png');
+    background-size: 100px 24px;
+  }
 }
