--- a/style.css
+++ b/style.css
@@ -1,45 +1,55 @@
+html, body{
+  height: 100%;
+  margin: 0;
+}
 body{
-  font-family: 'Epilogue', sans-serif;
-  background-color: #031111;
-  padding: 30px;
+  background: rgb(1,23,20);
+  background: linear-gradient(10deg, rgba(1,23,20,1) 0%, rgba(3,20,20,1) 35%, rgba(0,20,20,1) 100%);
+  padding: 40px;
 }
 h1{
   color: #ffffff;
-  font-family: 'Epilogue', sans-serif;
-  font-size: 4.2em;
-  font-weight: 800;
+  font-family: 'Expletus Sans', sans-serif;
+  font-size: 5.5em;
+  font-weight: 700;
   line-height: 100%;
   letter-spacing: 0em;
   text-align: left;
   margin:0 auto;
-  padding: 10px 0;
+  padding: 5px 0;
 }
 p{
-  color: #6F8B8B;
-  font-family: 'Epilogue', sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
+  color: #99A9A9;
+  font-family: 'Expletus Sans', sans-serif;
+  font-size: 1.5em;
+  font-weight: 400;
   line-height: 140%;
   letter-spacing: 0em;
   text-align: left;
   margin: 0 auto;
-  padding: 0;
+  padding-left: 4px;
 
 }
 a{
   color: #fff;
 }
-.center{
+.message{
   margin: 0 auto;
   position: absolute;
-  top: 55%;
-  -ms-transform: translateY(-55%);
-  transform: translateY(-55%);
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .copy{
-  position:absolute;
-  bottom:4%;
   font-size: 0.8em;
+}
+.topnav{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  position: fixed;
+  width: 100%;
+  background-color: #031111;
 }
 .mylogo{
   background: url('assets/logo.png');
@@ -51,4 +61,18 @@ a{
     background-image: url('assets/logo@2x.png');
     background-size: 100px 24px;
   }
+}
+header{
+  height:56px;
+  padding:32px 0 0 0;
+}
+footer{
+  height:56px;
+  bottom: 0%;
+}
+.content {
+  min-height: calc(100vh - 70px);
+}
+.footer {
+  height: 50px;
 }
