--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body{
 body{
   background: rgb(1,23,20);
   background: linear-gradient(10deg, rgba(1,23,20,1) 0%, rgba(3,20,20,1) 35%, rgba(0,20,20,1) 100%);
-  padding: 40px;
+
 }
 h1{
   color: #ffffff;
@@ -34,6 +34,7 @@ a{
   color: #fff;
 }
 .message{
+  padding-left: 30px;
   margin: 0 auto;
   position: absolute;
   top: 50%;
@@ -64,15 +65,16 @@ a{
 }
 header{
   height:56px;
-  padding:32px 0 0 0;
+  padding:30px 30px 0 30px;
 }
 footer{
-  height:56px;
-  bottom: 0%;
+  height:50px;
 }
 .content {
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh - 80px);
 }
 .footer {
+  padding-top: 35px;
+  padding-left: 30px;
   height: 50px;
 }
